# LCOS-Core

./: .gitignore  CLAIMS.md  CONTRIBUTING.md  EMPLOYMENT_CONTRACT_MEMO.md  EVIDENCE_MAP.md  LICENSE  PROOF.md  PUBLIC_DISCLOSURE_NOTICE.md  PUBLIC_PROSPECTUS.md  QUICKSTART.md  README.md  RELEASE_PACKAGE_MANIFEST.md  ROADMAP.md  SECURITY.md  SPONSOR_MEMO.md  pyproject.toml
.github/workflows/: ci.yml
docs/concepts/: continuous_state_runtime.md  deterministic_routing.md  governed_execution.md  receipt_gated_runtime.md
docs/examples/: governed_intake_walkthrough.md  receipt_chain_walkthrough.md  routing_demo_walkthrough.md
docs/release/: IP_POSITION.md  PUBLIC_SCOPE.md  RELEASE_INTENT.md  SKOS_TO_LCOS_BOUNDARY.md  SKOS_TO_LCOS_DERIVATION_MAP.md  THIRD_PARTY_AND_ATTRIBUTION_REVIEW.md
docs/research/: WORKED_EXAMPLE_RECEIPT_REPLAY.md  bounded_kernels_as_governance_surface.md  continuous_state_note.md  deterministic_routing_for_auditability.md  hold_as_first_class_state.md  operator_kernels.md  routing_graph_research.md
docs/roadmap/: NEXT_PUBLIC_ARTIFACTS.md
examples/governed_intake_demo/: demo.py
examples/minimal_receipt_chain/: demo.py
examples/requests/: simple_accept.json
examples/routing_demo/: demo.py
fixtures/adversarial/: ambiguous_request.json  (+3 more)
schemas/: intake_record.schema.json  intake_request.schema.json  receipt.schema.json  routing_decision.schema.json  state_transition.schema.json
tests/: test_chain.py  test_claim.py  test_claim_execution_chain.py  test_execution.py  test_intake.py  test_ledger.py  test_replay.py  test_router.py
(+25 files in other folders)
