[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcos-core-toy-public"
version = "0.1.0"
description = "Toy public LCOS primitives for receipt ledgers, governed intake, and deterministic routing"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Eryn Eldvar"}]
dependencies = []

[project.scripts]
lcos-toy = "lcos_toy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

